# NDKTest

./: README.md
OpenCVDemo/app/: build.gradle
OpenCVDemo/app/src/androidTest/java/com/liu/opencvdemo/: ExampleInstrumentedTest.java
OpenCVDemo/app/src/main/: AndroidManifest.xml
OpenCVDemo/app/src/main/cpp/: CMakeLists.txt  bitmapUtils.cpp  crop.cpp  jni_utils.cpp  native-lib.cpp
OpenCVDemo/app/src/main/cpp/include/common/: bitmapUtils.h  crop.h  jni_utils.h  opencvhead.h
OpenCVDemo/app/src/main/cpp/include/opencv2/videoio/legacy/: constants_c.h
OpenCVDemo/app/src/main/java/com/liu/opencvdemo/: MainActivity.java
OpenCVDemo/app/src/main/java/com/liu/opencvdemo/utils/: NativeUtils.java
OpenCVDemo/app/src/main/jni/: com_liu_opencvdemo_utils_NativeUtils.h
OpenCVDemo/app/src/main/res/layout/: activity_main.xml
OpenCVDemo/app/src/test/java/com/liu/opencvdemo/: ExampleUnitTest.java
OpenCVDemo/gradle/wrapper/: gradle-wrapper.properties
OpenCVDemo2/: settings.gradle
OpenCVDemo2/app/: build.gradle
OpenCVDemo2/app/src/androidTest/java/com/liuyz/opencvdemo2/: ExampleInstrumentedTest.java
OpenCVDemo2/app/src/main/: AndroidManifest.xml
OpenCVDemo2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.py
OpenCVDemo2/app/src/main/java/com/liuyz/opencvdemo2/: MainActivity.java
OpenCVDemo2/app/src/main/res/values/: strings.xml  themes.xml
OpenCVDemo2/app/src/main/res/values-night/: themes.xml
OpenCVDemo2/app/src/test/java/com/liuyz/opencvdemo2/: ExampleUnitTest.java
OpenCVDemo2/gradle/wrapper/: gradle-wrapper.properties
